[package]
name = "hetbuf"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# proptest = {version = "0.9", default-features = false, features = ["alloc"]}
proptest = {version = "0.9"}
