[package]
name = "winapi_dialog"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {git = "https://github.com/retep998/winapi-rs.git", rev = "b43649ce35699ab014365206564d82865ffb036e", features = ["winuser", "libloaderapi"]}
hetbuf = {path = "../../../hetbuf"}

[build-dependencies]
embed-resource = "1"
